[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://platform_box_collision.tres" type="Shape" id=2]
[ext_resource path="res://platform_box_mesh.tres" type="CubeMesh" id=3]
[ext_resource path="res://VelocityDisplay.gd" type="Script" id=4]
[ext_resource path="res://MovementSettings.gd" type="Script" id=5]

[sub_resource type="CylinderShape" id=1]
radius = 0.25

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0.494118, 1 )
metallic = 1.0
roughness = 0.2
emission_enabled = true
emission = Color( 1, 0, 0.494118, 1 )
emission_energy = 0.5
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=3]
material = SubResource( 2 )
top_radius = 0.5
bottom_radius = 0.25
height = 1.75

[sub_resource type="SpatialMaterial" id=10]
metallic = 1.0
roughness = 0.5
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 0.25
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=11]
material = SubResource( 10 )
radius = 0.375
height = 0.75

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.682353, 0.658824, 0.717647, 1 )

[sub_resource type="ProceduralSky" id=13]

[sub_resource type="Environment" id=12]
background_mode = 3
background_sky = SubResource( 13 )
background_color = Color( 0.223529, 0.145098, 0.305882, 1 )
glow_enabled = true

[node name="TestLevel" type="Spatial"]

[node name="Player" type="KinematicBody" parent="."]
unique_name_in_owner = true
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Body" type="MeshInstance" parent="Player/CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, 0 )
mesh = SubResource( 3 )
skeleton = NodePath("../..")

[node name="Wheel" type="MeshInstance" parent="Player/CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.625, 0 )
mesh = SubResource( 11 )

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 3, 4 )
current = true

[node name="Level" type="Spatial" parent="."]

[node name="StaticBody" type="StaticBody" parent="Level"]
transform = Transform( 16, 0, 0, 0, 1, 0, 0, 0, 16, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
material/0 = SubResource( 14 )

[node name="StaticBody2" type="StaticBody" parent="Level"]
transform = Transform( 4, 0, 0, 0, 1, 0, 0, 0, 4, -7, 1, -25 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody2"]
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody2/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../../../StaticBody2")

[node name="StaticBody3" type="StaticBody" parent="Level"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 1.5, 0.5, -21.5 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody3"]
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody3/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../../../StaticBody2")

[node name="StaticBody4" type="StaticBody" parent="Level"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 3.5, -7, 0.5, -5 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody4"]
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody4/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../../../StaticBody2")

[node name="StaticBody5" type="StaticBody" parent="Level"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 2.5, -7, 1.5, -5 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody5"]
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody5/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../../../StaticBody2")

[node name="StaticBody6" type="StaticBody" parent="Level"]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1.5, -7, 2.5, -5 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody6"]
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody6/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../../../StaticBody2")

[node name="StaticBody7" type="StaticBody" parent="Level"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 2, 26, -1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody7"]
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody7/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../../../StaticBody2")

[node name="StaticBody8" type="StaticBody" parent="Level"]
transform = Transform( 0.5, 0, 0, 0, 3, 0, 0, 0, 2, 23.5, 3, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody8"]
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody8/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../../../StaticBody2")

[node name="StaticBody9" type="StaticBody" parent="Level"]
transform = Transform( 0.5, 0, 0, 0, 3, 0, 0, 0, 2, 31.5, 3, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody9"]
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody9/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../../../StaticBody2")

[node name="StaticBody10" type="StaticBody" parent="Level"]
transform = Transform( 0.25, 0, 0, 0, 0.75, 0, 0, 0, 1.5, 8, 0.75, -5 )

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody10"]
shape = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody10/CollisionShape"]
mesh = ExtResource( 3 )
skeleton = NodePath("../../../StaticBody2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[node name="Debug" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VelocityDisplay" type="Label" parent="Debug"]
margin_bottom = 14.0
script = ExtResource( 4 )

[node name="MovementSettings" type="PanelContainer" parent="Debug"]
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/MovementSettings"]
margin_left = 7.0
margin_top = 7.0
margin_right = 171.0
margin_bottom = 123.0

[node name="inertia" type="HBoxContainer" parent="Debug/MovementSettings/VBoxContainer"]
margin_right = 164.0
margin_bottom = 16.0

[node name="Slider" type="HSlider" parent="Debug/MovementSettings/VBoxContainer/inertia"]
margin_right = 160.0
margin_bottom = 16.0
rect_min_size = Vector2( 160, 0 )
max_value = 20.0
step = 0.2
value = 4.0

[node name="Label" type="Label" parent="Debug/MovementSettings/VBoxContainer/inertia"]
margin_left = 164.0
margin_top = 1.0
margin_right = 164.0
margin_bottom = 15.0

[node name="inertia_air" type="HBoxContainer" parent="Debug/MovementSettings/VBoxContainer"]
margin_top = 20.0
margin_right = 164.0
margin_bottom = 36.0

[node name="Slider" type="HSlider" parent="Debug/MovementSettings/VBoxContainer/inertia_air"]
margin_right = 160.0
margin_bottom = 16.0
rect_min_size = Vector2( 160, 0 )
max_value = 20.0
step = 0.2
value = 2.0

[node name="Label" type="Label" parent="Debug/MovementSettings/VBoxContainer/inertia_air"]
margin_left = 164.0
margin_top = 1.0
margin_right = 164.0
margin_bottom = 15.0

[node name="inertia_stop" type="HBoxContainer" parent="Debug/MovementSettings/VBoxContainer"]
margin_top = 40.0
margin_right = 164.0
margin_bottom = 56.0

[node name="Slider" type="HSlider" parent="Debug/MovementSettings/VBoxContainer/inertia_stop"]
margin_right = 160.0
margin_bottom = 16.0
rect_min_size = Vector2( 160, 0 )
max_value = 20.0
step = 0.2
value = 12.0

[node name="Label" type="Label" parent="Debug/MovementSettings/VBoxContainer/inertia_stop"]
margin_left = 164.0
margin_top = 1.0
margin_right = 164.0
margin_bottom = 15.0

[node name="speed" type="HBoxContainer" parent="Debug/MovementSettings/VBoxContainer"]
margin_top = 60.0
margin_right = 164.0
margin_bottom = 76.0

[node name="Slider" type="HSlider" parent="Debug/MovementSettings/VBoxContainer/speed"]
margin_right = 160.0
margin_bottom = 16.0
rect_min_size = Vector2( 160, 0 )
max_value = 32.0
value = 16.0

[node name="Label" type="Label" parent="Debug/MovementSettings/VBoxContainer/speed"]
margin_left = 164.0
margin_top = 1.0
margin_right = 164.0
margin_bottom = 15.0

[node name="jump_power" type="HBoxContainer" parent="Debug/MovementSettings/VBoxContainer"]
margin_top = 80.0
margin_right = 164.0
margin_bottom = 96.0

[node name="Slider" type="HSlider" parent="Debug/MovementSettings/VBoxContainer/jump_power"]
margin_right = 160.0
margin_bottom = 16.0
rect_min_size = Vector2( 160, 0 )
max_value = 32.0
value = 16.0

[node name="Label" type="Label" parent="Debug/MovementSettings/VBoxContainer/jump_power"]
margin_left = 164.0
margin_top = 1.0
margin_right = 164.0
margin_bottom = 15.0

[node name="gravity" type="HBoxContainer" parent="Debug/MovementSettings/VBoxContainer"]
margin_top = 100.0
margin_right = 164.0
margin_bottom = 116.0

[node name="Slider" type="HSlider" parent="Debug/MovementSettings/VBoxContainer/gravity"]
margin_right = 160.0
margin_bottom = 16.0
rect_min_size = Vector2( 160, 0 )
max_value = 128.0
value = 64.0

[node name="Label" type="Label" parent="Debug/MovementSettings/VBoxContainer/gravity"]
margin_left = 164.0
margin_top = 1.0
margin_right = 164.0
margin_bottom = 15.0
